# SDE-Simulator

./: .gitignore  CMakeLists.txt  ExprParse.hpp  LICENSE  README.md  main.cpp
Compiler/: CMakeLists.txt  bytecode.hpp  compiler.cpp  compiler.hpp  vm.hpp
Lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp  token.hpp
Parser/: AST.cpp  AST.hpp  CMakeLists.txt  Parser.cpp  Parser.hpp  Variable_Environment.hpp
Tests/: CMakeLists.txt  CompilerTests.cpp  DerivativeTests.cpp  LexerTests.cpp  ParserTests.cpp  simdAccuracyTests.cpp
include/: allocator.hpp  ast-analysis.hpp  concepts.hpp  dispatch.hpp  frontend.hpp  io.hpp  math.hpp  results.h  results.hpp  utils.hpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  cache_manip.cpp  cache_manip.hpp  cli.cpp  cli.hpp  exec_cli.cpp  exec_cli.hpp  get_value.hpp  run_cli.cpp  run_cli.hpp  sql_cache.cpp  sql_cache.hpp
src/engine/: CMakeLists.txt  dispatch.cpp
src/engine/CPUengine/: CMakeLists.txt  CPUdispatch.hpp  CPUengine.hpp
src/engine/CUDAEngine/: CMakeLists.txt  CudaCodegen.hpp  GPUengine.hpp
src/engine/GPUengine/: CMakeLists.txt  CudaCodegen.hpp
src/engine/MetalEngine/: CMakeLists.txt  MetalCodegen.hpp  MetalEngine.hpp  MetalEngine.mm
src/frontend/: CMakeLists.txt
src/frontend/AST-Analysis/: CMakeLists.txt  ast-analysis.cpp
src/frontend/Compiler/: CMakeLists.txt  bytecode.hpp  compiler.cpp  compiler.hpp
src/frontend/Lexer/: lexer.cpp  lexer.hpp  token.hpp
src/frontend/Parser/: AST.cpp  AST.hpp  CMakeLists.txt  Parser.cpp  Parser.hpp  Variable_Environment.hpp
src/input-output/: CMakeLists.txt  exec_io.cpp  exec_io.hpp  io.cpp  run_io.hpp  store_io.hpp
src/minisimd/: CMakeLists.txt  helpers-AVX-impl.hpp  helpers-NEON-impl.hpp  helpers.hpp  minisimd.hpp  simd_math.hpp  types-AVX-impl.hpp  types-NEON-impl.hpp  types-scalar-impl.hpp  types-scalar-imple.hpp  types.hpp
src/python/: CMakeLists.txt  bindings.cpp
src/sde_utils/: CMakeLists.txt  rng.hpp
src/simd/: macroes.hpp
src/utils/: CMakeLists.txt  rng.hpp  transform.hpp
